err/pictureflow.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cv2'...
Listing './lib/python3.5/site-packages/cv2/.libs'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/opencv_python-3.3.0.10.dist-info'...
Listing './lib/python3.5/site-packages/pictureflow'...
Listing './lib/python3.5/site-packages/pictureflow/core'...
Compiling './lib/python3.5/site-packages/pictureflow/core/node.py'...
***   File "./lib/python3.5/site-packages/pictureflow/core/node.py", line 33
    raise TypeError(f'Node is expecting {len(self._input_types)} inputs, got {len(parents)}')
                                                                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pictureflow/flow'...
Listing './lib/python3.5/site-packages/pictureflow/output'...
Listing './lib/python3.5/site-packages/pictureflow/transform'...
Compiling './lib/python3.5/site-packages/pictureflow/transform/color.py'...
***   File "./lib/python3.5/site-packages/pictureflow/transform/color.py", line 31
    item.id += f'-{self.id}'
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pictureflow/transform/convert.py'...
***   File "./lib/python3.5/site-packages/pictureflow/transform/convert.py", line 38
    item.id += f'-{self.id}({tgt})'
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pictureflow/transform/path.py'...
***   File "./lib/python3.5/site-packages/pictureflow/transform/path.py", line 30
    item.id += f'-{self.id}'
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pictureflow/transform/rotate.py'...
***   File "./lib/python3.5/site-packages/pictureflow/transform/rotate.py", line 33
    item.id += f'-{self.id}({rotation})'
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pictureflow/transform/scale.py'...
***   File "./lib/python3.5/site-packages/pictureflow/transform/scale.py", line 28
    image.id += f'-{self.id}({scaling})'
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pictureflow/vision'...
Compiling './lib/python3.5/site-packages/pictureflow/vision/object_detector.py'...
***   File "./lib/python3.5/site-packages/pictureflow/vision/object_detector.py", line 42
    item.id += f'-{self.id}'
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pictureflow-1.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/test/test_core'...
Compiling './lib/python3.5/site-packages/test/test_core/test_image.py'...
***   File "./lib/python3.5/site-packages/test/test_core/test_image.py", line 51
    expected_filename = f'{self.img_id}.{self.ext}'
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/test/test_core/test_node.py'...
***   File "./lib/python3.5/site-packages/test/test_core/test_node.py", line 80
    self.fail(f'Parent typecheck should not run when typecheck is disabled')
                                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/test/test_flow'...
Listing './lib/python3.5/site-packages/test/test_output'...
Listing './lib/python3.5/site-packages/test/test_transform'...
Compiling './lib/python3.5/site-packages/test/test_transform/test_color.py'...
***   File "./lib/python3.5/site-packages/test/test_transform/test_color.py", line 63
    self.assertEqual(data[0].id, f'{self.img_id}-{self.mask.id}')
                                                               ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
